demo/sdl_opengl3/nimnuklear/nuklear.nim


proc edit_string*(a2: ptr context; a3: flags; buffer: cstring; len: ptr cint; max: cint;
                 a7: plugin_filter): flags {.cdecl, importc: "nk_edit_string",
    header: headernuklear.}
proc edit_string_zero_terminated*(a2: ptr context; a3: flags; buffer: cstring;
                                 max: cint; a6: plugin_filter): flags {.cdecl,
    importc: "nk_edit_string_zero_terminated", header: headernuklear.}
proc edit_buffer*(a2: ptr context; a3: flags; a4: ptr text_edit; a5: plugin_filter): flags {.
    cdecl, importc: "nk_edit_buffer", header: headernuklear.}
proc edit_focus*(a2: ptr context; flags: flags) {.cdecl, importc: "nk_edit_focus",
    header: headernuklear.}
proc edit_unfocus*(a2: ptr context) {.cdecl, importc: "nk_edit_unfocus",
                                  header: headernuklear.}
proc chart_begin*(a2: ptr context; a3: chart_type; num: cint; min: cfloat; max: cfloat): cint {.
    cdecl, importc: "nk_chart_begin", header: headernuklear.}
proc chart_begin_colored*(a2: ptr context; a3: chart_type; a4: color; active: color;
                         num: cint; min: cfloat; max: cfloat): cint {.cdecl,
    importc: "nk_chart_begin_colored", header: headernuklear.}
proc chart_add_slot*(ctx: ptr context; a3: chart_type; count: cint; min_value: cfloat;
                    max_value: cfloat) {.cdecl, importc: "nk_chart_add_slot",
                                       header: headernuklear.}
proc chart_add_slot_colored*(ctx: ptr context; a3: chart_type; a4: color; active: color;
                            count: cint; min_value: cfloat; max_value: cfloat) {.
    cdecl, importc: "nk_chart_add_slot_colored", header: headernuklear.}
proc chart_push*(a2: ptr context; a3: cfloat): flags {.cdecl, importc: "nk_chart_push",
    header: headernuklear.}
proc chart_push_slot*(a2: ptr context; a3: cfloat; a4: cint): flags {.cdecl,
    importc: "nk_chart_push_slot", header: headernuklear.}
proc chart_end*(a2: ptr context) {.cdecl, importc: "nk_chart_end",
                               header: headernuklear.}
proc plot*(a2: ptr context; a3: chart_type; values: ptr cfloat; count: cint; offset: cint) {.
    cdecl, importc: "nk_plot", header: headernuklear.}
proc plot_function*(a2: ptr context; a3: chart_type; userdata: pointer; value_getter: proc (
    user: pointer; index: cint): cfloat {.cdecl.}; count: cint; offset: cint) {.cdecl,
    importc: "nk_plot_function", header: headernuklear.}
proc popup_begin*(a2: ptr context; a3: popup_type; a4: cstring; a5: flags; bounds: rect): cint {.
    cdecl, importc: "nk_popup_begin", header: headernuklear.}
proc popup_close*(a2: ptr context) {.cdecl, importc: "nk_popup_close",
                                 header: headernuklear.}
proc popup_end*(a2: ptr context) {.cdecl, importc: "nk_popup_end",
                               header: headernuklear.}
proc combo*(a2: ptr context; items: cstringArray; count: cint; selected: cint;
           item_height: cint; size: vec2): cint {.cdecl, importc: "nk_combo",
    header: headernuklear.}
proc combo_separator*(a2: ptr context; items_separated_by_separator: cstring;
                     separator: cint; selected: cint; count: cint; item_height: cint;
                     size: vec2): cint {.cdecl, importc: "nk_combo_separator",
                                      header: headernuklear.}
proc combo_string*(a2: ptr context; items_separated_by_zeros: cstring; selected: cint;
                  count: cint; item_height: cint; size: vec2): cint {.cdecl,
    importc: "nk_combo_string", header: headernuklear.}
proc combo_callback*(a2: ptr context; item_getter: proc (a2: pointer; a3: cint;
    a4: cstringArray) {.cdecl.}; userdata: pointer; selected: cint; count: cint;
                    item_height: cint; size: vec2): cint {.cdecl,
    importc: "nk_combo_callback", header: headernuklear.}
proc combobox*(a2: ptr context; items: cstringArray; count: cint; selected: ptr cint;
              item_height: cint; size: vec2) {.cdecl, importc: "nk_combobox",
    header: headernuklear.}
proc combobox_string*(a2: ptr context; items_separated_by_zeros: cstring;
                     selected: ptr cint; count: cint; item_height: cint; size: vec2) {.
    cdecl, importc: "nk_combobox_string", header: headernuklear.}
proc combobox_separator*(a2: ptr context; items_separated_by_separator: cstring;
                        separator: cint; selected: ptr cint; count: cint;
                        item_height: cint; size: vec2) {.cdecl,
    importc: "nk_combobox_separator", header: headernuklear.}
proc combobox_callback*(a2: ptr context; item_getter: proc (a2: pointer; a3: cint;
    a4: cstringArray) {.cdecl.}; a4: pointer; selected: ptr cint; count: cint;
                       item_height: cint; size: vec2) {.cdecl,
    importc: "nk_combobox_callback", header: headernuklear.}
proc combo_begin_text*(a2: ptr context; selected: cstring; a4: cint; size: vec2): cint {.
    cdecl, importc: "nk_combo_begin_text", header: headernuklear.}
proc combo_begin_label*(a2: ptr context; selected: cstring; size: vec2): cint {.cdecl,
    importc: "nk_combo_begin_label", header: headernuklear.}
proc combo_begin_color*(a2: ptr context; color: color; size: vec2): cint {.cdecl,
    importc: "nk_combo_begin_color", header: headernuklear.}
proc combo_begin_symbol*(a2: ptr context; a3: symbol_type; size: vec2): cint {.cdecl,
    importc: "nk_combo_begin_symbol", header: headernuklear.}
proc combo_begin_symbol_label*(a2: ptr context; selected: cstring; a4: symbol_type;
                              size: vec2): cint {.cdecl,
    importc: "nk_combo_begin_symbol_label", header: headernuklear.}
proc combo_begin_symbol_text*(a2: ptr context; selected: cstring; a4: cint;
                             a5: symbol_type; size: vec2): cint {.cdecl,
    importc: "nk_combo_begin_symbol_text", header: headernuklear.}
proc combo_begin_image*(a2: ptr context; img: img; size: vec2): cint {.cdecl,
    importc: "nk_combo_begin_image", header: headernuklear.}
proc combo_begin_image_label*(a2: ptr context; selected: cstring; a4: img; size: vec2): cint {.
    cdecl, importc: "nk_combo_begin_image_label", header: headernuklear.}
proc combo_begin_image_text*(a2: ptr context; selected: cstring; a4: cint; a5: img;
                            size: vec2): cint {.cdecl,
    importc: "nk_combo_begin_image_text", header: headernuklear.}
proc combo_item_label*(a2: ptr context; a3: cstring; alignment: flags): cint {.cdecl,
    importc: "nk_combo_item_label", header: headernuklear.}
proc combo_item_text*(a2: ptr context; a3: cstring; a4: cint; alignment: flags): cint {.
    cdecl, importc: "nk_combo_item_text", header: headernuklear.}
proc combo_item_image_label*(a2: ptr context; a3: img; a4: cstring; alignment: flags): cint {.
    cdecl, importc: "nk_combo_item_image_label", header: headernuklear.}
proc combo_item_image_text*(a2: ptr context; a3: img; a4: cstring; a5: cint;
                           alignment: flags): cint {.cdecl,
    importc: "nk_combo_item_image_text", header: headernuklear.}
proc combo_item_symbol_label*(a2: ptr context; a3: symbol_type; a4: cstring;
                             alignment: flags): cint {.cdecl,
    importc: "nk_combo_item_symbol_label", header: headernuklear.}
proc combo_item_symbol_text*(a2: ptr context; a3: symbol_type; a4: cstring; a5: cint;
                            alignment: flags): cint {.cdecl,
    importc: "nk_combo_item_symbol_text", header: headernuklear.}
proc combo_close*(a2: ptr context) {.cdecl, importc: "nk_combo_close",
                                 header: headernuklear.}
proc combo_end*(a2: ptr context) {.cdecl, importc: "nk_combo_end",
                               header: headernuklear.}
proc contextual_begin*(a2: ptr context; a3: flags; a4: vec2; trigger_bounds: rect): cint {.
    cdecl, importc: "nk_contextual_begin", header: headernuklear.}
proc contextual_item_text*(a2: ptr context; a3: cstring; a4: cint; align: flags): cint {.
    cdecl, importc: "nk_contextual_item_text", header: headernuklear.}
proc contextual_item_label*(a2: ptr context; a3: cstring; align: flags): cint {.cdecl,
    importc: "nk_contextual_item_label", header: headernuklear.}
proc contextual_item_image_label*(a2: ptr context; a3: img; a4: cstring;
                                 alignment: flags): cint {.cdecl,
    importc: "nk_contextual_item_image_label", header: headernuklear.}
proc contextual_item_image_text*(a2: ptr context; a3: img; a4: cstring; len: cint;
                                alignment: flags): cint {.cdecl,
    importc: "nk_contextual_item_image_text", header: headernuklear.}
proc contextual_item_symbol_label*(a2: ptr context; a3: symbol_type; a4: cstring;
                                  alignment: flags): cint {.cdecl,
    importc: "nk_contextual_item_symbol_label", header: headernuklear.}
proc contextual_item_symbol_text*(a2: ptr context; a3: symbol_type; a4: cstring;
                                 a5: cint; alignment: flags): cint {.cdecl,
    importc: "nk_contextual_item_symbol_text", header: headernuklear.}
proc contextual_close*(a2: ptr context) {.cdecl, importc: "nk_contextual_close",
                                      header: headernuklear.}
proc contextual_end*(a2: ptr context) {.cdecl, importc: "nk_contextual_end",
                                    header: headernuklear.}
proc tooltip*(a2: ptr context; a3: cstring) {.cdecl, importc: "nk_tooltip",
                                        header: headernuklear.}
proc tooltip_begin*(a2: ptr context; width: cfloat): cint {.cdecl,
    importc: "nk_tooltip_begin", header: headernuklear.}
proc tooltip_end*(a2: ptr context) {.cdecl, importc: "nk_tooltip_end",
                                 header: headernuklear.}
proc menubar_begin*(a2: ptr context) {.cdecl, importc: "nk_menubar_begin",
                                   header: headernuklear.}
proc menubar_end*(a2: ptr context) {.cdecl, importc: "nk_menubar_end",
                                 header: headernuklear.}
proc menu_begin_text*(a2: ptr context; title: cstring; title_len: cint; align: flags;
                     size: vec2): cint {.cdecl, importc: "nk_menu_begin_text",
                                      header: headernuklear.}
proc menu_begin_label*(a2: ptr context; a3: cstring; align: flags; size: vec2): cint {.
    cdecl, importc: "nk_menu_begin_label", header: headernuklear.}
proc menu_begin_image*(a2: ptr context; a3: cstring; a4: img; size: vec2): cint {.cdecl,
    importc: "nk_menu_begin_image", header: headernuklear.}
proc menu_begin_image_text*(a2: ptr context; a3: cstring; a4: cint; align: flags;
                           a6: img; size: vec2): cint {.cdecl,
    importc: "nk_menu_begin_image_text", header: headernuklear.}
proc menu_begin_image_label*(a2: ptr context; a3: cstring; align: flags; a5: img;
                            size: vec2): cint {.cdecl,
    importc: "nk_menu_begin_image_label", header: headernuklear.}
proc menu_begin_symbol*(a2: ptr context; a3: cstring; a4: symbol_type; size: vec2): cint {.
    cdecl, importc: "nk_menu_begin_symbol", header: headernuklear.}
proc menu_begin_symbol_text*(a2: ptr context; a3: cstring; a4: cint; align: flags;
                            a6: symbol_type; size: vec2): cint {.cdecl,
    importc: "nk_menu_begin_symbol_text", header: headernuklear.}
proc menu_begin_symbol_label*(a2: ptr context; a3: cstring; align: flags;
                             a5: symbol_type; size: vec2): cint {.cdecl,
    importc: "nk_menu_begin_symbol_label", header: headernuklear.}
proc menu_item_text*(a2: ptr context; a3: cstring; a4: cint; align: flags): cint {.cdecl,
    importc: "nk_menu_item_text", header: headernuklear.}
proc menu_item_label*(a2: ptr context; a3: cstring; alignment: flags): cint {.cdecl,
    importc: "nk_menu_item_label", header: headernuklear.}
